fixed alignment of text and github logo

--- a/style/main.scss
+++ b/style/main.scss
@@ -69,6 +69,7 @@ th, td {
 .gitlogo{
   width: 4em;
   vertical-align: middle;
+  margin-bottom: 0.1em;
 }
 
 .gitLink {
